# Ledger-

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
.guardrails/: hub_registry.json
api/: index.py
frontend/: .env.example  .env.local.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/notebooks/: ingest.ipynb  ingest_utils.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(protected)/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/intake/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: AdvisorSummaryModal.tsx  AuthProvider.tsx  ChatHistoryDrawer.tsx  NavBar.tsx  NextStepAction.tsx  ProfileEditForm.tsx  RequireAuth.tsx  motion-card.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: country-combobox.tsx  (+2 more)
frontend/src/hooks/: useUserProfile.ts
frontend/src/lib/: cognito.ts  countries.ts  openQuestions.ts  pdf-downloader.ts  profileContext.ts  profileGate.ts  types.ts  userApi.ts
lib/: agent.py  deterministic_tools.py  jailbreak_guard.py  tavily_tool.py  tax_types.py
lib/model_provider/: __init__.py  config.py  exceptions.py  langchain_bridge.py  providers.py  sparse_embeddings.py  types.py
notebooks/: eval_results.json  evaluate.ipynb  golden_dataset.json  ingest.ipynb  ingest_utils.py  test_questions.jsonl
tests/: __init__.py  test_chat_history.py  test_deterministic_tools.py  test_model_provider.py  test_tavily_tool.py
(+16 files in other folders)
